--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Unbounded:200,300,regular,500,600,700,800,900&display=swap);
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:300,regular,500,600,700,800,900&display=swap);
+
 * {
     padding: 0px;
     margin: 0px;
@@ -196,7 +197,9 @@ body::after {
     -webkit-transition: -webkit-transform 0.3s ease 0s;
     transition: -webkit-transform 0.3s ease 0s;
     transition: transform 0.3s ease 0s;
-    transition: transform 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
+    transition:
+        transform 0.3s ease 0s,
+        -webkit-transform 0.3s ease 0s;
     padding: 20px;
     width: 100%;
     max-width: 900px;
@@ -306,6 +309,16 @@ body::after {
 
 .chat-page .head__container {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
 }
 
 .head__body {
